--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <include src="./partials/gallery.html"></include>
     <include src="./partials/slider.html"></include>
     <include src="./partials/contact.html"></include>
+    <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
   </body>
 </html>
