add-gallery-back-drop

--- a/src/index.html
+++ b/src/index.html
@@ -31,5 +31,6 @@
     <include src="./partials/contact.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal.html"></include>
+    <include src="./partials/gallery-back-drop.html"></include>
   </body>
 </html>
