--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <script type="module" src="./js/slider.js"></script>
     <script type="module" src="./js/products.js"></script>
     <script type="module" src="./js/gallery.js"></script>
+    <script type="module" src="./js/modal.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
