--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
     />
     <link rel="icon" href="./images/favicon/favicon.ico" type="image/x-icon" />
-    <title>Page title</title>
+    <title>Ice cream</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
