--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="ice cream made with passion" />
     <link
       rel="shortcut icon"
       href="./images/favicon/favicon.ico"
